# catan-bot

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  render.yaml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: admin.py  auth.py  games.py  health.py  users.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/crud/: __init__.py  base.py  game.py  user.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/middleware/: cors.py
backend/app/models/: __init__.py  base.py  game.py  mixins.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  game.py  response.py  token.py  user.py
backend/app/services/: __init__.py  auth_service.py  game_service.py  user_service.py
backend/app/utils/: constants.py
backend/catan_backend/: config.py
catan_bot/: __init__.py  cli.py  models.py  ollama_client.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/lib/: backendApiClient.ts  supabaseClient.ts
frontend/src/screens/: AuthScreen.tsx  GameScreen.tsx  LoginScreen.tsx  SignUpScreen.tsx
supabase/: README.md
supabase/migrations/: 0001_init.sql
