[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-monorepo"
version = "0.1.0"
description = "Monorepo for full-stack Catan app (FastAPI backend + React frontend)."
authors = [
  { name = "catan-bot user" }
]
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0.0",
]


