[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-backend"
version = "0.1.0"
description = "FastAPI backend for Catan app using Supabase Postgres."
authors = [
  { name = "catan-bot user" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
catan-backend = "catan_backend.main:run"

[tool.setuptools]
packages = ["catan_backend"]

