[tool.poetry]
name = "catan-backend"
version = "0.1.0"
description = "FastAPI backend for Catan app using Supabase Postgres."
authors = ["catan-bot user"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.30.0" }
sqlalchemy = ">=2.0.0"
psycopg2-binary = ">=2.9.0"
pydantic = { extras = ["email"], version = ">=2.7.0" }
python-dotenv = ">=1.0.0"

[tool.poetry.scripts]
catan-backend = "app.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
